# homeslashmusic

./: Cargo.toml  README.md  flake.nix
.direnv/: flake-profile-3-link
core/client/: Cargo.toml
core/client/src/: lib.rs  track_list.rs
core/ipc/: Cargo.toml
core/ipc/src/: api.rs  lib.rs
core/ipc/src/api/: client.rs  requests.rs  responses.rs  server.rs  types.rs
core/ipc/src/api/client/: track_list.rs
core/ipc/src/api/types/: basic.rs  tracks.rs
core/plugin/: Cargo.toml
core/plugin/src/: lib.rs
hsm-cli/: Cargo.toml  build.rs
hsm-cli/src/: cli.rs  commands.rs  error.rs  ipc.rs  main.rs
hsm-ipc/src/: api.rs
hsm-ipc/src/api/: requests.rs  responses.rs
hsm-server/: Cargo.toml
hsm-server/src/: audio_server.rs  ctrlc.rs  ipc.rs  main.rs  mpris_server.rs  plugin_manager.rs  signals.rs
hsm-server/src/audio_server/: event.rs  message.rs  player.rs  request_handler.rs  track.rs  track_cache.rs
hsm-server/src/audio_server/player/: atomic_control_status.rs  control_status.rs  controlled_source.rs  decoder.rs  errors.rs  output.rs  track.rs  track_list.rs
hsm-server/src/audio_server/track/: cache.rs  loading.rs
hsm-server/src/mpris_server/: conversions.rs  mpris_impl.rs
nix/: homeslashmusic.nix
plugins/ipc/: Cargo.toml
plugins/ipc/src/: lib.rs
plugins/mpris/: Cargo.toml
plugins/mpris/src/: lib.rs  mpris_impl.rs
src/: main.rs
