[workspace]
resolver = "3"
members = [
  "hsm-server",
  "hsm-cli", "hsm-ipc",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
hsm-ipc = { path = "./hsm-ipc" }

rodio = "0.21.1"
smol = "2.0.2"
rustix = "1.0.8"

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

git-version = "0.3.9"
