[workspace]
resolver = "3"
members = [
  "hsm-server",
  "hsm-cli", "core/ipc",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
hsm-ipc = { path = "./core/ipc" }

rodio = "0.21.1"
smol = "2.0.2"
rustix = { version = "1.0.8", features = ["process"] }
ctrlc = "3.4.7"
futures-concurrency = "7.6.3"

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

git-version = "0.3.9"
atomic_enum = "0.3.0"
