[workspace]
resolver = "3"
members = [
  "hsm-server",
  "hsm-cli", "core/ipc",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
hsm-ipc = { path = "./core/ipc" }

rodio = { version = "0.21.1", default-features = false, features = ["playback"] }
symphonia = { version = "0.5.4", features = ["mp3", "isomp4", "aac"] }
smol = "2.0.2"
rustix = { version = "1.0.8", features = ["process"] }
async-signal = "0.2.12"
futures-concurrency = "7.6.3"
async-oneshot = "0.5.9"
thiserror = "2.0.12"
git-version = "0.3.9"

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

clap = { version = "4.5.41", features = ["derive"] }
clap_complete = "4.5.48"
