[package]
name = "hsm-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "hsm"
path = "src/main.rs"

[dependencies]
hsm-ipc.workspace = true
hsm-client.workspace = true

clap.workspace = true
thiserror.workspace = true

serde_json.workspace = true

[build-dependencies]
hsm-ipc.workspace = true

clap.workspace = true
clap_complete.workspace = true
