[package]
name = "hsm-server"
version.workspace = true
edition.workspace = true

[dependencies]
hsm-ipc.workspace = true

rodio.workspace = true
symphonia.workspace = true
smol.workspace = true
async-signal.workspace = true
futures-concurrency.workspace = true
async-oneshot.workspace = true
thiserror.workspace = true
urlencoding.workspace = true
dashmap.workspace = true
mpris-server = "0.9.0"
