[package]
name = "hsm-server"
version.workspace = true
edition.workspace = true

[features]
default = ["hsm-plugin-mpris", "hsm-plugin-ipc"]

hsm-plugin-mpris = ["dep:hsm-plugin-mpris"]
hsm-plugin-ipc = ["dep:hsm-plugin-ipc"]

[dependencies]
hsm-ipc.workspace = true
hsm-plugin.workspace = true

hsm-plugin-mpris = { workspace = true, optional = true }
hsm-plugin-ipc = { workspace = true, optional = true }

rodio.workspace = true
symphonia.workspace = true
smol.workspace = true
async-signal.workspace = true
futures-concurrency.workspace = true
async-oneshot.workspace = true
thiserror.workspace = true
urlencoding.workspace = true
dashmap.workspace = true
rand.workspace = true
